--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
         </svg>
     </a>
 
-    <p class="extra">
+    <!-- <p class="extra">
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a>
         by
         <a class="link" href="https://github.com/sergiokopplin/indigo">Kopplin</a>
-    </p>
+    </p> -->
 </footer>
