--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,8 @@
    or page.title == "Tags"
 %}{% assign showHeader = true %}{% endif %}
 
+{% include lang.html %}
+
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
         {% if site.about %}
