--- a/_sass/components/lang.sass
+++ b/_sass/components/lang.sass
@@ -1,5 +1,5 @@
-.nav,
-.nav-home
+.lang,
+.lang-home
     > .list
         list-style: none
         margin: 0
@@ -15,10 +15,11 @@
             padding: 20px 10px
             text-decoration: none
 
-.nav
+.lang
     position: absolute
-    right: 80px
-    top: 80px
+    right: 200px
+    top: 40px
+    text-align: center
 
     > .list
         padding: 0 13px 0
@@ -27,7 +28,10 @@
             font-size: 1.4rem
             padding: 20px 10px
 
-.nav-home
+.lang-home
+    position: absolute
+    right: 50px
+    top: 20px
     margin-top: 40px
     text-align: center
 
