--- a/_sass/components/lang.sass
+++ b/_sass/components/lang.sass
@@ -29,10 +29,8 @@
             padding: 20px 10px
 
 .lang-home
-    position: absolute
-    right: 50px
-    top: 20px
-    margin-top: 40px
+    margin-top: 10px
+    margin-bottom: 100px
     text-align: center
 
     > .list
