--- a/_sass/components/lang.sass
+++ b/_sass/components/lang.sass
@@ -17,9 +17,9 @@
 
 .lang
     position: absolute
-    right: 200px
-    top: 40px
-    text-align: center
+    left: 20px
+    top: 20px
+    text-align: right
 
     > .list
         padding: 0 13px 0
