--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-main">
-    {{ site.name }} © {{ site.time | date: '%Y' }}
+    {{ site.name[page.lang] }} © {{ site.time | date: '%Y' }}
 
     <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
         <svg class="icon icon-rss">
