--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,14 +2,14 @@
     <ul class="list">
         {% if page.title != "Home" %}
             <li class="item">
-                <a class="link" href="{{ site.url }}/">{{ site.lang[page.lang].home }}</a>
+                <a class="link" href="{{ site.lang[page.lang].url }}/">{{ site.lang[page.lang].home }}</a>
             </li>
         {% endif %}
 
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">{{ site.lang[page.lang].blog }}</a>
+                    <a class="link" href="{{ site.url }}/{% if page.lang == 'English' %}blog{% else %}blog-zh{% endif%}">{{ site.lang[page.lang].blog }}</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -17,7 +17,7 @@
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">{{ site.lang[page.lang].projects }}</a>
+                    <a class="link" href="{{ site.url }}/{% if page.lang == 'English' %}projects{% else %}projects-zh{% endif%}">{{ site.lang[page.lang].projects }}</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -25,7 +25,7 @@
         {% if site.about == true %}
             {% if page.title != "About" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/about">{{ site.lang[page.lang].about }}</a>
+                    <a class="link" href="{{ site.url }}/{% if page.lang == 'English' %}about{% else %}about-zh{% endif%}">{{ site.lang[page.lang].about }}</a>
                 </li>
             {% endif %}
         {% endif %}
