--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -1,9 +1,24 @@
 <span class="reading-time" title="Estimated read time">
     {% assign words = content | number_of_words %}
 
-    {% if words < 360 %}
-        1 min
+    {% if page.lang == "English" %}
+        Estimated read time: 
     {% else %}
-        {{ words | divided_by:180 }} mins
+        预计阅读时间: 
+    {% endif %}
+
+    {% if words < 360 %}
+        {% if page.lang == "English" %}
+            1 min
+        {% else %}
+            1 分钟
+        {% endif %}
+    {% else %}
+        {{ words | divided_by:180 }} 
+        {% if page.lang == "English" %}
+            mins
+        {% else %}
+            分钟
+        {% endif %}
     {% endif %}
 </span>
