--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,21 +1,26 @@
 <div class="related">
     {% assign hasSimilar = '' %}
-    {% for post in site.posts  %}
+    {% assign posts=site.posts | where:"lang", page.lang  %}
+    {% for post in posts  %}
         {% assign postHasSimilar = false %}
         {% for tag in post.tags %}
             {% for thisTag in page.tags %}
                 {% if postHasSimilar == false and hasSimilar.size < 5 and post != page and tag == thisTag %}
                     {% if hasSimilar.size == 0 %}
-                    <h4>Related Posts</h4>
-                    <ul>
+                    {% if page.lang == "English" %}
+                        <h4>Related Posts</h4>
+                    {% else %}
+                        <h4>相关阅读</h4>
                     {% endif %}
-                    <li class="relatedPost">
-                        <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
-                        {% if post.series %}
-                            (Series: {{ post.series }})
+                        <ul>
                         {% endif %}
-                        </a>
-                    </li>
+                        <li class="relatedPost">
+                            <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
+                            {% if post.series %}
+                                (Series: {{ post.series }})
+                            {% endif %}
+                            </a>
+                        </li>
                     {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
                     {% assign postHasSimilar = true %}
                 {% endif %}
