--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@ layout: compress
         {% include analytics-google.html %}
     {% endif %}
 
+    {% if site.analytics-baidu %}
+        {% include analytics-baidu.html %}
+    {% endif %} 
+
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta name=author content="{{ site.name[page.lang] }}">
