--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,13 @@
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
         {% if site.about %}
-            <a class="link" href="{{ site.url }}/about">
-                <img class="selfie" alt="{{ site.lang[page.lang].name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
-            </a>
+            {% if page.lang == 'English'%}
+                <a class="link" href="{{ site.url }}/about">
+            {% else %} 
+                <a class="link" href="{{ site.url }}/about-zh">
+            {% endif %}
+                    <img class="selfie" alt="{{ site.lang[page.lang].name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+                </a>
         {% else %}
             <span class="link">
                 <img class="selfie" alt="{{ site.lang[page.lang].name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
