--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,14 +25,34 @@ layout: page
 
 {% if site.post-advance-links contains page.category %}
     <div class="blog-navigation">
-        {% if page.previous.hidden == false and page.previous.url %}
-            <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-        {% else %}
+        {% assign has_prev = false %}
+        {% for post in site.posts %}
+            {% if post.lang == page.lang and post.hidden == false %}
+                {% if prev %}
+                    <a class="prev" href="{{ site.url }}{{ post.url }}">&laquo; {{ post.title }}</a>
+                    {% assign has_prev = true %}
+                {% endif %}
+                {% assign prev = false %}
+                {% if post.id == page.id %}
+                    {% assign prev = true %}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+        {% if has_prev == false %}
             <a class="prev"></a>
         {% endif %}
-        {% if page.next.hidden == false and page.next.url %}
-            <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-        {% endif %}
+        {% for post in site.posts reversed %}
+            {% if post.lang == page.lang and post.hidden == false %}
+                {% if next %}
+                    <a class="next" href="{{ site.url }}{{ post.url }}">{{ post.title }} &raquo;</a>
+                {% break %}
+                {% endif %}
+                {% assign next = false %}
+                {% if post.id == page.id %}
+                    {% assign next = true %}
+                {% endif %}
+            {% endif %}
+        {% endfor %}
     </div>
 {% endif %}
 
