--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -1,6 +1,7 @@
 
 @import "base/variables";
 @import "base/normalize";
+@import "base/particles";
 @import "base/syntax";
 @import "base/general";
 @import "base/helpers";
